add footer and header on partials

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html(lang="en")
     head
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr", crossorigin="anonymous")
         title GeonTube
     body
-        header
-            h1 GeonTube
+        include ../partials/header
         main
             block content
-        footer
-            h1 &copy; GeonTube
+        include ../partials/footer
