--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -14,8 +14,8 @@ header.header
                     a(href=routes.login) Log In
             else
                 li
-                    a(href=routes.upload) Upload
+                    a(href=`/videos${routes.upload}`) Upload
                 li
                     a(href=routes.userDetail(user.id)) Profile
                 li
-                    a(href=routes.logOut) Log Out
+                    a(href=routes.logout) Log Out
